<?xml version="1.0"?>
<package format="3">
  <name>dmap_localization</name>
  <version>0.0.0</version>
  <description>Distance Map Localization using ICP with a precomputed distance map and ROS 2.</description>
  <maintainer email="mosix11@yahoo.com">mosix11</maintainer>
  <license>MIT</license> <!-- Add a license declaration -->

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building and running the node -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>